@@ -4,12 +4,12 @@
   <!ENTITY % general-entities SYSTEM "../../general.ent">
   %general-entities;
 
-  <!ENTITY samba3-download-http "http://samba.org/samba/ftp/stable/samba-&samba3-version;.tar.gz">
-  <!ENTITY samba3-download-ftp  "ftp://samba.org/pub/samba/samba-&samba3-version;.tar.gz">
-  <!ENTITY samba3-md5sum        "98ac9db9f4b6ebfc3f013aa193ffb0d1">
+  <!ENTITY samba3-download-http "http://ftp.samba.org/pub/stable/samba-&samba3-version;.tar.gz">
+  <!ENTITY samba3-download-ftp  "ftp://ftp.samba.org/pub/stable/samba-&samba3-version;.tar.gz">
+  <!ENTITY samba3-md5sum        "d8e070e2a3b12f202f347e4427469bc2">
   <!ENTITY samba3-size          "27.7 MB">
-  <!ENTITY samba3-buildsize     "345 MB">
-  <!ENTITY samba3-time          "4.6 SBU (including about 3.2 SBU to run the test suite)">
+  <!ENTITY samba3-buildsize     "446 MB">
+  <!ENTITY samba3-time          "2.2 SBU (add about 2.9 SBU to run the test suite)">
 ]>
 
 <sect1 id="samba3" xreflabel="Samba-&samba3-version;">
