@@ -1,3 +1,6 @@
+2012-04-20 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Correct start path in swat
+
 2012-04-18 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Add cifs to netfs stop function.
    * Remove obsolete kernel version tests in nfs-server.
